# YPF-Ruta

./: .gitignore  Cargo.toml  README.md  estaciones.csv  start.sh
.cargo/: config.toml
YPFRuta/: Cargo.toml
YPFRuta/src/: main.rs
cliente/: conexion.sh  ejecutar_clientes.sh
empresa/: Cargo.toml
empresa/src/: lib.rs  main.rs
empresa/src/actores/: mod.rs
empresa/src/actores/empresa/: empresa.rs  empresa_actor.rs  messages.rs  mod.rs
empresa/src/actores/ypf_ruta/: messages.rs  mod.rs  ypf_ruta.rs
estacion/: Cargo.toml  estaciones.csv  tmux.sh  tmux_2.sh
estacion/src/: lib.rs  main.rs
estacion/src/actores/: estacion.rs  estacion_cercana.rs  mod.rs
estacion/src/actores/estacion/: actor.rs  estacion.rs  estacion_actor.rs  messages.rs  mod.rs
estacion/src/actores/surtidor/: actor.rs  messages.rs  mod.rs  surtidor.rs
estacion/src/actores/ypf/: messages.rs  (+2 more)
estacion/src/errors/: error.rs
estacion/src/loader/: addr_loader.rs  estacion_loader.rs  mod.rs
res/: borrador.txt
tests_integracion/: Cargo.toml
tests_integracion/tests/: estacion_test.rs  ypf_ruta_test.rs
util/: Cargo.toml
util/src/: lib.rs
util/src/logs/: logger.rs  mod.rs
util/src/structs/: mod.rs  venta.rs
ypf_ruta/: Cargo.toml  out.txt  out2.txt  out3.txt  tmux.sh
ypf_ruta/src/: main.rs
ypf_ruta/src/actores/: mod.rs
ypf_ruta/src/data/: empresas.json  empresas_1.json  empresas_2.json  empresas_3.json  tarjetas.json  tarjetas_1.json  tarjetas_2.json  tarjetas_3.json  ventas.json  ventas_1.json  ventas_2.json  ventas_3.json  ypfs.config
ypf_ruta/src/scripts/: estacion.sh
(+91 files in other folders)
